Bugzilla Bug 115124 ###!!! ASSERTION: Can't use |Truncate()| to make a string longer.: 'aNewLength <= this->Length()' r=pink, sr=alecf,  a=brendan Bugzilla Bug 115105 crash dereferencing null for bad xbl r=bryner, sr=alecf, a=brendan